--- a/styles.css
+++ b/styles.css
@@ -15,5 +15,5 @@ h1 {
 
 /* Set a background color for the entire page */
 body {
-    background-color: #00ffdd; /* Replace with the color of your choice */
+    background-color: #000000; /* Replace with the color of your choice */
 }
